# data-migration-multi-agent

./: .gitignore  AGENTS.md  README.md  RTK.md  RTK_INTEGRATION.md  cloudera_to_fabric_migration.py  convert_and_package.py  docker-compose.yml  generate_comprehensive_report.py  generate_synthetic_cloudera_data.py  generate_synthetic_sap_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  generate-report.yml
config/: economics.yaml  onboarding_questions.yaml
docs/: RTK_INSTALLATION.md  onboarding-and-target-strategy.md  token-economics-and-headroom.md
scripts/: display_conversion_action_plan.py  display_final_summary.py  display_summary.py  generate_cloudera_synthetic_data.py  generate_dashboard.py  generate_migration_report.py  generate_oracle_databricks_report.py  generate_oracle_exadata_synthetic_data.py  generate_snowflake_migration_report.py  generate_snowflake_synthetic_data.py  generate_text_to_parquet_conversion_plan.py  install_rtk.ps1  install_rtk.sh  run_migration_pipeline.py  run_snowflake_databricks_pipeline.py  setup_rtk.py  simulate_cloudera_fabric_migration.py  simulate_oracle_exadata_databricks_migration.py  simulate_snowflake_databricks_migration.py
src/migration_agents/: __init__.py
src/migration_sdk/: __init__.py
src/migration_sdk/contracts/: intake.py
src/migration_sdk/core/: agent.py  plugin_catalog.py  registry.py  runtime.py
src/migration_sdk/economics/: __init__.py  budget.py
src/migration_sdk/optimization/: __init__.py  headroom.py
src/migration_sdk/plugins/: onboarding.py
src/migration_sdk/targets/: base.py  databricks.py  fabric.py
src/migration_sdk/telemetry/: __init__.py  events.py  sink.py
src/migration_sdk/validation/: __init__.py  evidence.py  runtime_checks.py
templates/: INDEX.md  MIGRATION_GUIDE.md  README.md  dashboard.template.html  example-config.json
tests/: test_deterministic_validation.py  test_headroom_economics.py  test_onboarding_sdk.py
