[project]
name = "data-migration-multi-agent"
version = "0.1.0"
description = "Production-oriented multi-agent data migration factory with synthetic test data generation"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "networkx>=3.3",
  "faker>=26.0",
  "pyyaml>=6.0",
  "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27"]
headroom = ["headroom-ai>=0.1"]

[project.scripts]
migration-agents = "migration_agents.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
