[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-migration-multi-agent"
version = "0.1.0"
description = "Production-oriented multi-agent data migration SDK for Microsoft Fabric and Databricks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Julio Pessan"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "networkx>=3.3",
  "faker>=26.0",
  "pyyaml>=6.0",
  "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
]
headroom = ["headroom-ai>=0.1"]

[project.scripts]
migration-agents = "migration_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/migration_agents", "src/migration_sdk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
packages = ["migration_sdk"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["headroom", "headroom.*"]
ignore_missing_imports = true
